# Multivendor-app

./: db.sqlite3  pyproject.toml  requirements.txt
main/: settings.py  urls.py
multivendor/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
multivendor/migrations/: 0001_initial.py
templates/:  vendor_dashboard.html  cart.html  checkout.html  dashboard.html  edit_products.html  edit_profile.html  home.html  login.html  notifications.html  order_history.html  orders.html  payment.html  post_product.html  product_detail.html  products.html  profile.html  register.html  settings.html  vendor_earnings.html  vendor_products.html
