[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.16.1",
    "heroicons>=2.14.0",
    "pillow>=12.1.1",
    "requests>=2.32.5",
    "twilio>=9.10.3",
]
